avance de ejercicios

--- a/S3/1.dom-selectors/exercise-1.html
+++ b/S3/1.dom-selectors/exercise-1.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="exercise-1.js" defer></script>
     <title>Document</title>
+    <script src="exercise-1.js" defer></script>
 </head>
-<body>
+    <body>
     <button class="showme">Pillame!</button>
 </body>
 </html>
