--- a/S3/1.dom-selectors/exercise-2.html
+++ b/S3/1.dom-selectors/exercise-2.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="exercise-2.js" defer></script>
     <title>Document</title>
+    <script src="exercise-2.html" defer></script>
 </head>
 <body>
-    <p id="pillado">Aqui estoy 8)</p>
+    <p id="pillado">Aqui estoy 8</p>
 </body>
 </html>
