--- a/S3/1.dom-selectors/exercise-4.html
+++ b/S3/1.dom-selectors/exercise-4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="exercise-4.js" defer></script>
     <title>Document</title>
+    <script src="exercise-4.js" defer></script>
 </head>
 <body>
     <h4 class="pokemon">Bulbasaur</h4>
