avance de ejercicios dom

--- a/S3/2.dom-modify/exercise-8.html
+++ b/S3/2.dom-modify/exercise-8.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <div></div>
-   <div></div>
+   <div>sad</div>
+   <div class='tusa'>sad</div>
 </body>
 </html>
