--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="S2/extra/exercise-6.js"></script>
+    <script src="S1/5.loops/exercise-3.js"></script>
 </body>
 </html>
